added armor class attribute, move combat modifier to subtab

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
@@ -1818,6 +1818,7 @@ input[type="checkbox"].sheet-kampf-nah {
   text-align: center;
 }
 
+
 .sheet-kampf-nah2-label14 {
 	grid-column: 3 /3;
   grid-row: 5 /5;
@@ -1833,6 +1834,23 @@ input[type="checkbox"].sheet-kampf-nah {
 	color: #000;
   text-align: center;
 }
+
+.sheet-kampf-nah2-label15 {
+	grid-column: 5 /5;
+  grid-row: 5 /5;
+
+	color: #000;
+  text-align: left;
+}
+
+.sheet-kampf-nah2-value13 {
+	grid-column: 6 /6;
+  grid-row: 5 /5;
+
+	color: #000;
+  text-align: center;
+}
+
 
 
 input[type="checkbox"].sheet-kampf-nah {
@@ -1881,10 +1899,26 @@ input[type="checkbox"].sheet-kampf-nah {
 .sheet-kampf-fern-cell3 {
 	grid-column: 3 /3;
   grid-row: 1 /1;
+	color: #000;
+  text-align: center;
+}
+
+.sheet-kampf-fern-cell46 {
+	grid-column: 4 /4;
+  grid-row: 1 /1;
+
+	color: #000;
+  text-align: left;
+}
+
+.sheet-kampf-fern-cell47 {
+	grid-column: 5 /5;
+  grid-row: 1 /1;
 
 	color: #000;
   text-align: center;
 }
+
 
 .sheet-kampf-fern-cell4 {
 	grid-column: 1 /1;
