--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -2,6 +2,9 @@
 // =============================
 input(name='attr_version' type='hidden' value='1')
 
+//MIXINS
+include src/pug/_mixins.pug
+
 // TABS
 // =============================
 input.type(name='attr_sheet_type' type='hidden' value='character')
@@ -126,7 +129,7 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
           h2(class='aligned-left') 11. bonds
           .vert-line
           h2(class='center') score
-        .grid.section
+        .repeating-container.border-bottom
           fieldset(class='repeating_bonds')
             .grid.section.border-bottom
               label(title='bond name')
@@ -141,12 +144,12 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
       .grid.section-incidents
         .grid.section.border-bottom
           h2(class='aligned-left') 13. incidents of san loss without going insane
-          - var i = 0;
-          .grid.section.border-bottom
-            while i < 3
-              label(title="violence checkbox " + ++i)
-                input(name='attr_violence' title='@{repeating_bonds_${x}_violence}' type="checkbox" value=i)
-                span()
+          .grid.section.incidents-body.border-bottom
+            each attr in ['violence', 'helplessness']
+              h3= attr
+              +checkbox(attr, 3)
+              span(class="italic") adapted
+
 
 //NOTES SHEET
 // =============================
@@ -167,7 +170,6 @@ footer
 
 //HIDDEN ATTRIBUTES
 // =============================
-
 
 
 //ROLL TEMPLATE
