--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -61,7 +61,7 @@
 /* TABS & LOGO SECTION
    ============================= */
     div.sheet-tabs {
-        margin-bottom: 1%;
+        margin-bottom: 0.5%;
 
         label > input {
             width: 100%;
@@ -89,9 +89,10 @@
 
 /* GENERIC CLASSES
     ============================= */
-    .sheet-center { @include text-align(center); }
     .sheet-border { border: 0.15em solid $maincolor; }
     .sheet-border-bottom { border-bottom: 0.15em solid $maincolor; }
+    .sheet-center { @include text-align(center); }
+    .sheet-italic {font-style: italic;}
     .sheet-pictos { font-family: $pictos; }
 
     h2.sheet-aligned-left,
@@ -224,11 +225,24 @@
                 div.sheet-section {
                     grid-template-columns: 25em 0.155em 1fr;
                 }
+
+                div.sheet-repeating-container {
+                    margin-bottom: 2%;
+                }
+            }
+
+            div.sheet-incidents-body {
+                grid-template-columns: 4em 1fr 1fr 1fr 4em 5em 1fr 1fr 1fr 4em;
+
+                @for $i from 1 through 3 {
+                    label:nth-of-type(#{$i})  + span {
+                        grid-area: 1 / 1 + $i / 1 / 1 + $i;
+                    }
+                }
             }
         }
 
    }
-
 
 // REPEATING SECTIONS
 //    =============================
