--- a/Delta Green by Arc Dream Publishing/src/scss/_repcontrol.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_repcontrol.scss
@@ -6,11 +6,23 @@
 	}
 
 	.repcontrol {
+		display: inline-grid;
+		grid-template-columns: 1fr 1fr;
+		margin: 1%;
+		width: 98%;
+
 		.btn {
 			color      : transparent !important;
+			float      : unset;
 			padding    : 0px;
 			text-shadow: none;
 			width      : 2.5em;
+		}
+
+
+		.repcontrol_add {
+			position: relative;
+			right: -84%;
 		}
 
 		.repcontrol_edit:after,
@@ -19,13 +31,19 @@
 			color: $maincolor;
 			font-family: pictos;
 			font-size: 1.5em;
-			left: -94%;
 			position: relative;
 			width: 0.2em;
 		}
 
-		.repcontrol_edit:after {content: '(';}
-		.repcontrol_add:after {content: '&';}
+		.repcontrol_edit:after {
+			content: '(';
+			left: -100%;
+		}
+
+		.repcontrol_add:after {
+			content: '&';
+			left: -70%;
+		}
 
 		.repcontrol_edit:hover,
 		.repcontrol_add:hover,
