--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -144,11 +144,12 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
       .grid.section-incidents
         .grid.section.border-bottom
           h2(class='aligned-left') 13. incidents of san loss without going insane
-          .grid.section.incidents-body.border-bottom
-            each attr in ['violence', 'helplessness']
-              h3= attr
-              +checkbox(attr, 3)
-              span(class="italic") adapted
+        .grid.section.incidents-body
+          each attr in ['violence', 'helplessness']
+            h3(class='center')= attr
+            input(name='attr_' + attr type='hidden')
+            +checkbox(attr, 3)
+            span(class="italic") adapted
 
 
 //NOTES SHEET
