--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -101,6 +101,44 @@
         text-align: left;
     }
 
+
+/* STYLED CHECKBOXES
+    ============================= */
+    label.sheet-styled-checkbox {
+        display: inline-grid;
+        grid-template-columns: 1fr;
+
+        input, span {
+            grid-area: 1 / 1 / 1 / 1
+        };
+
+        input[type='checkbox'] {
+            height: 85%;
+            opacity: 0;
+            position: relative;
+            width: 85%;
+            z-index: 2;
+        }
+
+        input[type='checkbox']:checked + span:before {
+            color           : $maincolor;
+            content         : '3';
+            display         : block;
+            font-family     : pictos;
+            font-size       : 1.2em;
+            height          : 0.2em;
+            width           : 0.2em;
+        }
+
+        span {
+            border: 0.1em solid $maincolor;
+            display: inline-block;
+            height: 80%;
+            text-align: center;
+            width: 80%;
+        }   
+    }
+
     /* NOT USED AT MOMENT 
     button.sheet-pictos {
         @include grid-area(1, 1, 1, 1);
@@ -183,7 +221,7 @@
 
             //STATISTICS
             div.sheet-section-stats {
-                input[type="number"] { text-align: right; }
+                input[type='number'] { text-align: right; }
 
                 div.sheet-section {
                     grid-template-columns: 9em 0.155em 2fr 0.155em 1fr 0.155em 14em;
@@ -212,10 +250,13 @@
         /* PSYCHOLOGICAL DATA
         ----------------------------- */
         div.sheet-pyschological-data {
-            grid-template-rows: min-content;
-
             @include grid-area(2, 2, 2, 2);
             grid-template-columns: 3em 1fr;
+            grid-template-rows: min-content;
+
+            textarea {
+                min-height: 11.5em;
+            }
             
             div.sheet-section-bonds {
                 div.sheet-max-height {
@@ -228,21 +269,19 @@
 
                 div.sheet-repeating-container {
                     margin-bottom: 2%;
+                    min-height: 14.5em;
                 }
             }
 
             div.sheet-incidents-body {
-                grid-template-columns: 4em 1fr 1fr 1fr 4em 5em 1fr 1fr 1fr 4em;
+                grid-template-columns: 5em 1fr 1fr 1fr 4em 6em 1fr 1fr 1fr 4em;
+                padding-top: 1%;
 
-                @for $i from 1 through 3 {
-                    label:nth-of-type(#{$i})  + span {
-                        grid-area: 1 / 1 + $i / 1 / 1 + $i;
-                    }
-                }
+                h3 {text-transform: capitalize;}
             }
         }
+    }   
 
-   }
 
 // REPEATING SECTIONS
 //    =============================
