--- a/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
@@ -2,6 +2,6 @@
 mixin checkbox(attr, num)
 	- var i = 0;
 	while i < num
-		label(title=attr + ' ' + ++i)
-			input(name='attr_' + attr title='@{repeating_bonds_${x}_' + attr + '}' type="checkbox" value=i)
-		span(class="styled-checkbox-" + i)
+		label(class='styled-checkbox' title=attr + ' ' + ++i)
+			input(name='attr_' + attr + '_' + i title='@{repeating_bonds_${x}_' + attr + '}' type='checkbox' value=i)
+			span
