[Upgrade] Merger with previous update

--- a/Eclipse Phase V2/Eclipse Phase V2.css
+++ b/Eclipse Phase V2/Eclipse Phase V2.css
@@ -2029,6 +2029,11 @@ input.sheet-hiddenRevealWeaponHide[value="o"] ~ button[type="roll"]
 	justify-content:center
 }
 
+.sheet-psiSleight > .sheet-block > div:first-of-type > span:nth-of-type(2)
+{
+	width:150px;
+}
+
 .sheet-psiSleight > .sheet-block > div:first-of-type > span:last-of-type
 {
 	margin-right:0px;
@@ -2050,7 +2055,7 @@ input.sheet-hiddenRevealWeaponHide[value="o"] ~ button[type="roll"]
 .sheet-psiSleight > .sheet-block > .sheet-hidden > .repcontainer > .repitem > button[type="roll"]
 {
 	border-radius:0px;
-	width:calc(100% - 518px);
+	width:calc(100% - 364px);
 	margin:0px;
 	margin-right:1px;
 	text-align:left;
@@ -2073,6 +2078,11 @@ input.sheet-hiddenRevealWeaponHide[value="o"] ~ button[type="roll"]
 	margin-right:1px;
 	margin-left:1px;
 	text-align:center;
+}
+
+.sheet-psiSleight > .sheet-block > .sheet-hidden > .repcontainer > .repitem > select:nth-of-type(2)
+{
+	width:150px;
 }
 
 .sheet-psiSleight > .sheet-block > .sheet-hidden > .repcontainer > .repitem > input[type="number"]
@@ -2346,6 +2356,12 @@ input.sheet-hiddenRevealWeaponHide[value="o"] ~ button[type="roll"]
 	padding-bottom:2px;
 	word-wrap:anywhere;
 	background-color:transparent;
+}
+
+.sheet-rolltemplate-EPpsi > div > label > span:last-of-type > span
+{
+	font-size:13px;
+	padding-left:0px;
 }
 
 .sheet-rolltemplate-EPcombat a[href^="!"], 
