save skills start

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -147,9 +147,29 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
         .grid.section.incidents-body
           each attr in ['violence', 'helplessness']
             h3(class='center')= attr
-            input(name='attr_' + attr type='hidden')
-            +checkbox(attr, 3)
+            +multiCheckbox(attr, 3)
             span(class="italic") adapted
+
+  //APPLICABLE SKILL SETS
+  .grid.applicable-skill-sets.border
+    .section-header
+      h1() applicable skill sets
+    .grid.section-body.border
+      - var skills1 = {'accounting': 10, 'alertness': 20, 'anthropology': 0, 'archeology': '0', 'art': '0', 'artillery': 0, 'athletics': 30, 'bureaucracy': 10, 'computer science': 0, 'craft': 0, 'criminology': 10, 'demolitions': 0, 'disguise': 10, 'dodge': 30, 'drive': 20, 'firearms': 20}
+      - var skills2 = {'first aid': 10, 'forensics': 0, 'heavy machinery': 10, 'heavy weapons': 0, 'history': 10, 'humint': 10, 'law': 0, 'medicine': 0, 'melee weapons': 30, 'military science': 0, 'navigate': 10, 'occult': 10, 'persuade': 20, 'pharmacy': 0, 'pilot': 0, 'psychotherapy': 10}
+      - var skills3 = {'ride': 10, 'science': 0, 'search': 20, 'sigint': 0, 'stealth': '10', 'surgery': 0, 'survival': 10, 'swim': 20, 'unarmed combat': 40, 'unnatural': 0};
+      .grid.section-skill-col
+        each val, key in skills1
+          +skill(val, key)
+      .grid.section-skill-col
+        each val, key in skills2
+          +skill(val, key)
+      .grid.section-skill-col
+        each val, key in skills3
+          +skill(val, key)
+        h3() foriegn languages and other skills:
+
+
 
 
 //NOTES SHEET
