--- a/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
@@ -1,7 +1,19 @@
-//STYLED CHECKBOXES
-mixin checkbox(attr, num)
+//MULTIPLE STYLED CHECKBOXES
+mixin multiCheckbox(attr, num)
 	- var i = 0;
 	while i < num
 		label(class='styled-checkbox' title=attr + ' ' + ++i)
 			input(name='attr_' + attr + '_' + i title='@{repeating_bonds_${x}_' + attr + '}' type='checkbox' value=i)
 			span
+
+//SKILL ROWS
+mixin skill(val, key)
+	- var attr = key.replace(' ', '_')
+	.grid.section-border-bottom
+		label(class='styled-checkbox' title=attr + ' fail checkbox')
+			input(name='attr_' + attr + '_fail' title='@{' + attr + '_fail}' type='checkbox' value='')
+		button
+			h3()= attr
+		span()= '(' + val + '%)'
+		.vert-line
+		input(name='attr_' + attr title='@{' + attr + '}' placeholder='0' type='number' value='')
