--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -280,6 +280,19 @@
                 h3 {text-transform: capitalize;}
             }
         }
+
+        /* APPLICABLE SKILL SET
+        ----------------------------- */
+        div.sheet-applicable-skill-sets {
+            @include grid-area(3, 1, 3, 3);
+            grid-template-columns: 1fr 1fr 1fr;
+
+            @for $i from 1 through 3 {
+                div.sheet-section-skill-col:nth-of-type(#{$i})  {
+                    grid-column: #{$i} / #{$i};
+                }
+            }
+        }
     }   
 
 
