skills nearly finished

--- a/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
@@ -4,16 +4,15 @@ mixin multiCheckbox(attr, num)
 	while i < num
 		label(class='styled-checkbox' title=attr + ' ' + ++i)
 			input(name='attr_' + attr + '_' + i title='@{repeating_bonds_${x}_' + attr + '}' type='checkbox' value=i)
-			span
 
 //SKILL ROWS
 mixin skill(val, key)
 	- var attr = key.replace(' ', '_')
-	.grid.section-border-bottom
+	.grid.section.border-bottom
 		label(class='styled-checkbox' title=attr + ' fail checkbox')
 			input(name='attr_' + attr + '_fail' title='@{' + attr + '_fail}' type='checkbox' value='')
-		button
-			h3()= attr
-		span()= '(' + val + '%)'
+		button(name=key title=key + ' roll' type='roll' value='')
+			h3()= key
+			span()= '(' + val + '%)'
 		.vert-line
 		input(name='attr_' + attr title='@{' + attr + '}' placeholder='0' type='number' value='')
