--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -105,38 +105,10 @@
 /* STYLED CHECKBOXES
     ============================= */
     label.sheet-styled-checkbox {
-        display: inline-grid;
-        grid-template-columns: 1fr;
-
-        input, span {
-            grid-area: 1 / 1 / 1 / 1
-        };
-
         input[type='checkbox'] {
-            height: 85%;
-            opacity: 0;
-            position: relative;
-            width: 85%;
-            z-index: 2;
-        }
-
-        input[type='checkbox']:checked + span:before {
-            color           : $maincolor;
-            content         : '3';
-            display         : block;
-            font-family     : pictos;
-            font-size       : 1.2em;
-            height          : 0.2em;
-            width           : 0.2em;
-        }
-
-        span {
-            border: 0.1em solid $maincolor;
-            display: inline-block;
-            height: 80%;
-            text-align: center;
-            width: 80%;
-        }   
+            height: 1.5em;
+            width: 1.5em;
+        } 
     }
 
     /* NOT USED AT MOMENT 
@@ -277,7 +249,7 @@
                 grid-template-columns: 5em 1fr 1fr 1fr 4em 6em 1fr 1fr 1fr 4em;
                 padding-top: 1%;
 
-                h3 {text-transform: capitalize;}
+                h3 { text-transform: capitalize; }
             }
         }
 
@@ -285,11 +257,51 @@
         ----------------------------- */
         div.sheet-applicable-skill-sets {
             @include grid-area(3, 1, 3, 3);
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 3em 1fr;
 
-            @for $i from 1 through 3 {
-                div.sheet-section-skill-col:nth-of-type(#{$i})  {
-                    grid-column: #{$i} / #{$i};
+            div.sheet-section-body {
+                grid-template-columns: 1fr 1fr 1fr;
+
+                @for $i from 1 through 3 {
+                    div.sheet-section-skill-col:nth-of-type(#{$i})  {
+                        grid-column: #{$i} / #{$i};
+                    }
+                }
+
+                div.sheet-section-skill-col {
+                    div.sheet-section {
+                        grid-template-columns: 1fr 15em 0.155em 2fr;
+                        border-right: 0.15em solid $maincolor;
+
+                        button {
+                            display: inline;
+
+                            h3 {
+                                display: inline;
+                                margin-right: 5%;
+                                padding-left: 2%;
+                            }
+
+                            button[name*="humint"] > h3,
+                            button[name*="sigint"] > h3 {
+                                text-transform: uppercase;
+                            }
+                        }
+
+                        input[type="checkbox"] {
+                            margin-left: 10%;
+                            margin-top: 50%;
+                        }
+
+                        input[type="number"] {
+                            height: 100%;
+                        }
+
+                        span {
+                            font-size: 0.8em;
+                            text-align: center;
+                        }
+                    }
                 }
             }
         }
