--- a/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
@@ -71,6 +71,7 @@
         h3 {
             font-size: 0.8em;
             line-height: 2em;
+            text-transform: capitalize;
         }
 
         input {
