--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -7,19 +7,22 @@ include src/pug/_mixins.pug
 
 // TABS
 // =============================
-input.type(name='attr_sheet_type' type='hidden' value='character')
-input.display_string(name='attr_character_settings' type='hidden' value='')
+input.type(name='attr_sheet_type' type='hidden' value='character, page1, page2')
 
 //TABS & LOGO
 // =============================
+img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
+
 .tabs.grid
-  // Buttons to toggle on GM whisper
+  // BUTTON TO TOGGLE ON GM WHISPER
   input.whisper-toggle(name='attr_gm_toggle' type='hidden' value=' ')
   button(data-i18n-title='gm-whisper-toggle' name='act_whisper' title='gm whisper toggle' type='action') 
    span(data-i18n='whisper-gm') Whisper GM
-  // LOGO
-  img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
   // CHARACTER SHEETS
+  button(data-i18n-title='sheet-page1' name='act_sheet_page1' title='page 1 toggle' type='action') 
+    span() page 1
+  button(data-i18n-title='sheet-page2' name='act_sheet_page2' title='page 2 toggle' type='action') 
+    span() page 2
   button(data-i18n-title='sheet-settings' name='act_sheet_select' title='sheet settings' type='action') 
     span(class='pictos') y 
 
@@ -35,7 +38,7 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
 // =============================
 .pc
   //PERSONAL DATA
-  .grid.personal-data.border
+  .grid.header-body.personal-data.border
     .section-header
       h1(data-i18n='personal-data') personal data
     .section-body
@@ -69,7 +72,7 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
           input(data-i18-placeholder='education' name='attr_education' placeholder='education and occupational history' title='${education}' type='text')
   
   //STATISTICAL DATA
-  .grid.statistical-data.border
+  .grid.header-body.statistical-data.border
     .section-header
       h1() statistical data
     //STATISTICS
@@ -89,12 +92,12 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
               span()= '(' + val + ')'
             .vert-line
             label(title=key + ' score')
-              input(name='attr_' + key + '_score' placeholder='10' title='@{' + key + '_score' + '}' type="number")
+              input(name='attr_' + key + '_score' placeholder='10' title='@{' + key + '_score' + '}' type='number')
             .vert-line
             span(class='center' name='attr_' + key title='@{' + key + '}')
             .vert-line
             label(title=key + ' distinguishing features')
-              input(name='attr_' + key + '_features' placeholder='distinguishing features' title='@{' + key + '_features' + '}' type="text")
+              input(name='attr_' + key + '_features' placeholder='distinguishing features' title='@{' + key + '_features' + '}' type='text')
             input(name='attr_' + key type='hidden' value='50')
       //DERIVED ATTRIBUTES
       .grid.section-derived
@@ -104,7 +107,7 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
             .vert-line
             h2(class='center')= string
         each val, key in {'hit points': 'HP', 'willpower points': 'WP', 'sanity points': 'SAN', 'breaking points': 'BP'}
-          - var attrName = key.replace(' ','_');
+          - const attrName = key.replace(' ','_');
           .grid.section.border-bottom
             .derived-attr
               h3(class='aligned-left')= key
@@ -113,14 +116,14 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
             span(class='center' name='attr_' + attrName + '_max' title='@{' + attrName + '_max' + '}')
             .vert-line
             label(title=key)
-              input(name='attr_' + attrName placeholder='10' title='@{' + attrName + '}' type="number")
+              input(name='attr_' + attrName placeholder='10' title='@{' + attrName + '}' type='number')
       //PHYSICAL DESCRIPTION
       .grid.section-physical
         h2(class='aligned-left') 9. physical description
         textarea(name='attr_physical_description' placeholder='physical description' title='@{physical_description}')
 
   //PSYCHOLOGICAL DATA
-  .grid.pyschological-data.border
+  .grid.header-body.pyschological-data.border
     .section-header
       h1() pyschological data 
     .grid.section-body
@@ -133,10 +136,10 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
           fieldset(class='repeating_bonds')
             .grid.section.border-bottom
               label(title='bond name')
-                input(name='attr_name' placeholder='bond' title='@{repeating_bonds_${x}_name}' type="text")
+                input(name='attr_name' placeholder='bond' title='@{repeating_bonds_${x}_name}' type='text')
               .vert-line
               label(title='bond score')
-                input(name='attr_score' placeholder='10' title='@{repeating_bonds_${x}_score}' type="number")
+                input(name='attr_score' placeholder='10' title='@{repeating_bonds_${x}_score}' type='number')
       .grid.section-motivations
         .grid.section.border-bottom
           h2(class='aligned-left') 12. motivations and mental disorders
@@ -148,16 +151,16 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
           each attr in ['violence', 'helplessness']
             h3(class='center')= attr
             +multiCheckbox(attr, 3)
-            span(class="italic") adapted
+            span(class='italic') adapted
 
   //APPLICABLE SKILL SETS
-  .grid.applicable-skill-sets.border
+  .grid.header-body.applicable-skill-sets.border
     .section-header
       h1() applicable skill sets
     .grid.section-body.border
-      - var skills1 = {'accounting': 10, 'alertness': 20, 'anthropology': 0, 'archeology': '0', 'art': '0', 'artillery': 0, 'athletics': 30, 'bureaucracy': 10, 'computer science': 0, 'craft': 0, 'criminology': 10, 'demolitions': 0, 'disguise': 10, 'dodge': 30, 'drive': 20, 'firearms': 20}
-      - var skills2 = {'first aid': 10, 'forensics': 0, 'heavy machinery': 10, 'heavy weapons': 0, 'history': 10, 'humint': 10, 'law': 0, 'medicine': 0, 'melee weapons': 30, 'military science': 0, 'navigate': 10, 'occult': 10, 'persuade': 20, 'pharmacy': 0, 'pilot': 0, 'psychotherapy': 10}
-      - var skills3 = {'ride': 10, 'science': 0, 'search': 20, 'sigint': 0, 'stealth': '10', 'surgery': 0, 'survival': 10, 'swim': 20, 'unarmed combat': 40, 'unnatural': 0};
+      - const skills1 = {'accounting': 10, 'alertness': 20, 'anthropology': 0, 'archeology': '0', 'art': '0', 'artillery': 0, 'athletics': 30, 'bureaucracy': 10, 'computer science': 0, 'craft': 0, 'criminology': 10, 'demolitions': 0, 'disguise': 10, 'dodge': 30, 'drive': 20, 'firearms': 20}
+      - const skills2 = {'first aid': 10, 'forensics': 0, 'heavy machinery': 10, 'heavy weapons': 0, 'history': 10, 'humint': 10, 'law': 0, 'medicine': 0, 'melee weapons': 30, 'military science': 0, 'navigate': 10, 'occult': 10, 'persuade': 20, 'pharmacy': 0, 'pilot': 0, 'psychotherapy': 10}
+      - const skills3 = {'ride': 10, 'science': 0, 'search': 20, 'sigint': 0, 'stealth': '10', 'surgery': 0, 'survival': 10, 'swim': 20, 'unarmed combat': 40, 'unnatural': 0};
       .grid.section-skill-col
         each val, key in skills1
           +skill(val, key)
@@ -167,10 +170,80 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
       .grid.section-skill-col
         each val, key in skills3
           +skill(val, key)
-        h3() foriegn languages and other skills:
+        .border-bottom
+          h3(class='margin-left') foriegn languages and other skills:
+        .repeating-container.border-bottom
+          fieldset(class='repeating_skills')
+            .grid.section-repeating.border-bottom
+              label(class='styled-checkbox' title='skill fail checkbox')
+                input(name='attr_fail' title='@{repeating_skills_${x}_fail}' type='checkbox')
+              input(name='attr_name' placeholder='skill name' title='@{repeating_skills_${x}_name}' type='text' value='')
+              button(name='skill roll' title='skill roll' type='roll' value='')
+              .vert-line
+              label(title='skill rank')
+                input(name='attr_rank' title='@{repeating_skills_${x}_rank}' placeholder='0' type='number' value='')
+      .section-directions.center 
+        span() Check a box when you attempt to use a skill and fail. After the session, add 1 to each checked skill and erase all checks.
 
+  //INJURIES
+  .grid.header-body.injuries.border
+    .section-header
+      h1() injuries
+    .grid.section-body.border
+      h2(class='aligned-left') 14. wounds and ailments
+      .border-bottom
+        textarea(name='attr_injuries' placeholder='injuries' title='@{injuries}')
+      .section-directions.center
+        span() Has First Aid been attempted since the last injury?
+        label(class='styled-checkbox' title='checkbox for first aid')
+          input(name='attr_injuries_first_aid' type='checkbox')
+        span() yes: only Medicine, Surgery, or long-term rest can help further.
 
+  //EQUIPMENT
+  .grid.header-body.equipment.border
+    .section-header
+      h1() equipment
+    .grid.section-body.border
+      - const weaponsAttrs = ['weapons', 'skill %', 'base range', 'damage', 'armor piercing', 'lethality %', 'kill radius', 'ammo']
+      h2(class='aligned-left') 15. armor and gear
+      .border-bottom
+        textarea(name='attr_armor_and_gear' placeholder='armor and gear' title='@{armor_and_gear}')
+      .section-directions.center.border-bottom
+        span() Body armor reduces the damage of all attacks except Called Shots and successful Lethality rolls.
+      .grid.section-weapons.border-bottom
+        each weapon in weaponsAttrs
+          - const weaponHeader = (weapon === 'weapons') ? '16. weapons' : weapon;
+          h2(title=weaponHeader)= weaponHeader
+          .vert-line
+      .repeating-container.border-bottom
+        fieldset(class='repeating_weapons')
+          .grid.section-weapons
+          each weapon in weaponsAttrs
+            - const attrName = weapon.replace(' ', '_').replace('%', 'percent')
+            .grid.section-weapons
+              label(title=weapon + ' input')
+                input(name='attr_' + attrName placeholder=weapon title='@{' + attrName + '}' type='text' value='')
+              .vert-line
 
+  //REMARKS
+  .grid.header-body.remarks.border
+    .section-header
+      h1() equipment
+    .grid.section-body.border
+      .section-directions.center
+        span() Please indicate why this agent was recruited and why the agent agreed to be recruited.
+
+  //AUTHORIZING OFFICER
+  .grid.authorizing-officer.border
+    .section
+      h2(class='margin-left') 20. authorizing officer
+      label(title='authorizing officer')
+        input(name='attr_authorizing_officer' placeholder='authorizing officer' title='authorizing officer' type='text' value='')
+    .vert-line
+    .section
+      h2(class='margin-left') 21. agent signature
+      label(title='agent signature')
+        input(name='attr_agent_signature' placeholder='agent signature' title='agent signature' type='text' value='')
 
 //NOTES SHEET
 // =============================
@@ -179,7 +252,7 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
 //SETTINGS SHEET
 // =============================
 .settings
-  select(name='attr_sheet_select' title="character sheet select" selected)
+  select(name='attr_sheet_select' title='character sheet select' selected)
     option(data-i18n='' value='character') character
     option(data-i18n='' value='npc') npc
 
@@ -200,5 +273,5 @@ footer
 
 //SHEETWORKERS
 // =============================
-script(type="text/worker")
+script(type='text/worker')
   include src/pug/sheetworkers.js
