--- a/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
@@ -1,18 +1,24 @@
 //MULTIPLE STYLED CHECKBOXES
 mixin multiCheckbox(attr, num)
-	- var i = 0;
+	- let i = 0;
 	while i < num
 		label(class='styled-checkbox' title=attr + ' ' + ++i)
 			input(name='attr_' + attr + '_' + i title='@{repeating_bonds_${x}_' + attr + '}' type='checkbox' value=i)
 
 //SKILL ROWS
 mixin skill(val, key)
-	- var attr = key.replace(' ', '_')
+	- const attr = key.replace(' ', '_')
+	- const array = ['art', 'craft', 'military science', 'pilot', 'science'];
 	.grid.section.border-bottom
-		label(class='styled-checkbox' title=attr + ' fail checkbox')
+		- const caps = (key === 'humint' || key === 'sigint') ? key.toUpperCase() : key;
+		label(class='styled-checkbox' title=caps + ' fail checkbox')
 			input(name='attr_' + attr + '_fail' title='@{' + attr + '_fail}' type='checkbox' value='')
-		button(name=key title=key + ' roll' type='roll' value='')
-			h3()= key
+		button(name=key title=caps + ' roll' type='roll' value='')
+			h3()= caps
 			span()= '(' + val + '%)'
 		.vert-line
-		input(name='attr_' + attr title='@{' + attr + '}' placeholder='0' type='number' value='')
+		label(title=caps + ' rank')
+			input(name='attr_' + attr title='@{' + attr + '}' placeholder='0' type='number' value='')
+		- if (array.includes(key))
+			label(class='custom-label' title=key + ' name')
+				textarea(name='attr_' + attr +'_name' placeholder='skill name' title='@{' + attr + '_name}' value='')
